--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-grid-system": "^7.1.1",
     "react-intersection-observer": "^8.31.0",
     "react-query": "^3.5.6",
     "react-query-devtools": "^2.6.3",
